--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,3 +3,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameInstanceClass=/Script/ArenaBattle.ABGameInstance
 
+[/Script/Engine.GarbageCollectionSettings]
+gc.TimeBetweenPurgingPendingKillObjects=10.000000
+
